# kali-companion

./: .gitignore  README.md  user_config.json
kali-core/: .env.example  pyproject.toml
kali-core/kali_core/: __main__.py  config.py  errors.py  lang_map.py  model_catalog.py  server.py  user_config.py
kali-core/kali_core/canvas/: __init__.py  registry.py  streamer.py
kali-core/kali_core/claws/: base.py  command.py  create_artifact.py  fs.py  games.py  git.py  manage_artifacts.py  screenshot.py  stt_corrector.py  tests.py
kali-core/kali_core/ear/: __init__.py  manager.py  vosk_engine.py
kali-core/kali_core/game/: gsi.py
kali-core/kali_core/gaze/: __init__.py  local.py
kali-core/kali_core/mind/: ai_config.py  artifact_stream.py  cloud_providers.py  connections_store.py  console_requester.py  executor.py  jobs.py  (+5 more)
kali-core/tests/: test_artifact_streaming.py  test_cors_restriction.py  test_custom_voices_migration.py  test_error_sanitization.py  test_fs_path_confinement.py  test_game_move_protocol.py  test_game_session_handlers.py  test_game_session_service.py  test_game_session_settings.py  test_http_provider_models.py  test_json_stream_extractor.py  test_llm_error_categorization.py  test_manage_artifacts.py  test_null_tts_provider.py  test_phase3.py  test_phase4_game.py  test_piper_provider_models.py  test_qwen_provider_models.py  test_runtime.py  test_server.py  test_server_tts_fallback.py  test_server_tts_runtime_switch.py  test_stt.py  test_subprocess_hardening.py  test_tools.py  test_tts_protocol.py  test_tts_provider_registry.py  test_zip_slip.py
(+277 files in other folders)
